--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Delicious</title>
-  <meta name="description" content="Free Bootstrap Theme by BootstrapMade.com">
-  <meta name="keywords" content="free website templates, free bootstrap themes, free template, free bootstrap, free website template">
+  <meta name="description" content="">
+  <meta name="keywords" content="Pure veg restaurants, Top vegetarian restaurants, Vegan restaurants, Restaurants near me, Diners nearby, Non-Veggie Group, Best non-veg restaurant near me, Non-veg food, Seafood restaurants near me, Chicken Restaurants,	Restaurants near me
+">
 
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Satisfy|Bree+Serif|Candal|PT+Sans">
   <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
