--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Delicious</title>
   <meta name="description" content="">
-  <meta name="keywords" content="Pure veg restaurants, Top vegetarian restaurants, Vegan restaurants, Restaurants near me, Diners nearby, Non-Veggie Group, Best non-veg restaurant near me, Non-veg food, Seafood restaurants near me, Chicken Restaurants,	Restaurants near me
-">
+  <meta name="keywords" content="Pure veg restaurants, Top vegetarian restaurants, Vegan restaurants, Restaurants near me,
+ Diners nearby, Non-Veggie Group, Best non-veg restaurant near me, Non-veg food, Seafood restaurants near me, 
+Chicken Restaurants,	Restaurants near me, Bacon, Seafood, hungry, food, delicous food">
 
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Satisfy|Bree+Serif|Candal|PT+Sans">
   <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
